[package]
name = "shadow-tls-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-rustls = { path = "../tokio-rustls-shadow-tls", features = ["logging", "tls12", "ring"]}
rustls-pemfile = "1.0.4"
webpki-roots = "0.26"

tokio = { version = "1", features = ["full"] }

bytes = "1.5"
anyhow = "1"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = { version = "3", features = ["termination"] }
hmac = "0.12"
local-sync = "0.1.0"
pin-project-lite = "0.2"
rand = "0.8"
rustc-hash = "1"
sha1 = "0.10"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustls-native-certs = "0.7.0"
tokio-util = {version = "0.7.10", features = ["io-util"]}

[profile.release]
lto = true
opt-level = 3
